# TPAggregator

./: CMakeLists.txt  Design.docx  README.md  benchmark_microsvc.lua  benchmark_microsvc_POST.lua  run_service.sh
source/: main.cpp  microsvc_controller.cpp  parser.cpp
source/foundation/: basic_controller.cpp
source/foundation/include/: basic_controller.hpp
source/include/: .in_memory_db.hpp.swp  in_memory_db.hpp  microsvc_controller.hpp  parser.hpp  redis_client.hpp  transaction.hpp
source/tests/: benchmark_microsvc_POST.lua
